# ScAnalyse

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  homescreen.cpp  homescreen.h  main.cpp  mainwindow.cpp  mainwindow.h  test.cpp
src/gui/: peakfit_view.cpp  peakfit_view.h
src/peakfit/: peakfit.cpp  peakfit.h
src/utils/: chart_wrapper.cpp  chart_wrapper.h  file_loader.cpp  file_loader.h
test_data/: Am241_GE1_1.CSV  Am241_GE1_2.CSV  Am241_GE1_3.CSV  Am241_GE1_4.CSV  Am241_GE3_1.CSV  Am241_GE3_2.CSV  Am241_GE3_3.CSV  Am241_GE3_4.CSV  Am241_GE3_5.CSV  Am241_GE3_6.CSV  Ba133_GE1_1.CSV  Ba133_GE1_2.CSV  Ba133_GE1_3.CSV  Ba133_GE1_4.CSV  Ba133_GE1_5.CSV  Ba133_GE1_6.CSV  Ba133_GE1_7.CSV  Ba133_GE1_8.CSV  Ba133_GE3_1.CSV  Ba133_GE3_2.CSV  Ba133_GE3_3.CSV  Ba133_GE3_4.CSV  Ba133_GE3_5.CSV  Ba133_GE3_6.CSV  Ba133_GE3_7.CSV  Ba133_GE3_8.CSV  Co60_GE1_1.CSV  Co60_GE1_2.CSV  Co60_GE1_3.CSV  Co60_GE1_4.CSV  Co60_GE3_1.CSV  Co60_GE3_2.CSV  Co60_GE3_3.CSV  Co60_GE3_4.CSV  Cs137_GE1_1.CSV  Cs137_GE1_2.CSV  Cs137_GE1_3.CSV  Cs137_GE1_4.CSV  Cs137_GE3_1.CSV  Cs137_GE3_2.CSV  (+10 more)
